Fix dev box overlapping the footer
Close #15

--- a/css/pages/development.styl
+++ b/css/pages/development.styl
@@ -20,6 +20,12 @@
   absolute: top 61px left 210px
 }
 
+#DevContainer {
+  display: flex
+  align-items: flex-start
+  padding-right: 0
+}
+
 #Shorttext {
   position: relative
   width: 660px
@@ -78,9 +84,8 @@
 #Sidebar {
   padding-left: 0px
   padding-right: 15px
-  margin-top: 15px
+  margin-left: 25px
   width: 250px
-  absolute: right 0px top -42px
   background-color: #E9DDD1
   border-style: solid
   border-width: 12px 12px 12px 12px 
